--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon ./index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "mirafgan",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -15,7 +15,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mysql2": "^3.6.5",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.11.0",
